...
        }
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("An Nam Study Room", fontWeight = FontWeight.Bold) },
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = Color.Blue,
                    titleContentColor = Color.White
                )
            )
        }
...
